# damien-cli-project

./: .coverage  .gitignore  LICENSE  README.md  SECURITY.md  delete_emails.py  pyproject.toml  test_rule.json
damien_cli/: cli_entry.py
damien_cli/core/: cli_utils.py  config.py  logging_setup.py
damien_cli/core_api/: exceptions.py  gmail_api_service.py  rules_api_service.py
damien_cli/features/email_management/: commands.py
damien_cli/features/rule_management/: commands.py  models.py  rule_storage.py  service.py
damien_cli/integrations/: gmail_integration.py
data/: apply_tobetrashed_label.json  rule_add_label_from.json  rule_disabled_test.json  rule_mark_read_body.json  rule_multi_condition_or.json  rule_trash_subject.json  rules.json
docs/: ARCHITECTURE.md  Action Item Checklist & Program Timeline.md  DEVELOPER_GUIDE.md  E2E_TESTING_CHECKLIST.md  GMAIL_API_SETUP.md  Other Preliminary Documentation.md  ROADMAP.md  USER_GUIDE.md  damien design document.md  damien-cli spec sheet.md  damien_directory_structure.txt  filesystem_layout.txt  first draft damien document.md  mermaid_diagram.md  mermaidcode.txt
tests/core_api/: test_gmail_api_service.py  test_rules_api_service.py  test_rules_api_service_new.py
tests/features/email_management/: test_commands.py
tests/features/rule_management/: test_commands.py  test_models.py  test_rule_storage.py  test_rules_apply_command.py  test_service.py
tests/integrations/: test_gmail_integration.py
